# musix-player

./: .gitignore  README.md  pyproject.toml
musix/: cli.py  db.py  player.py
tests/: test_db.py
