[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musix-player"
version = "0.2.0"
description = "A terminal-based music player powered by yt-dlp and mpv."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
    "yt-dlp>=2023.10.13"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
musix = "musix.cli:main"
